Create and render a form

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="https://www.thymeleaf.org/">
+<html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head>
-    <meta charset="UTF-8"/>
-    <title>Coding Events</title>
+   <meta charset="UTF-8"/>
+   <title>Coding Events</title>
 </head>
 <body>
-    <h1>Coding Events</h1>
-    <nav>
-        <ul>
-            <li><a href="/events">All Events</a> </li>
-        </ul>
-    </nav>
+   <h1>Coding Events</h1>
+   <nav>
+      <ul>
+         <li><a href="/events">All Events</a></li>
+      </ul>
+   </nav>
 </body>
 </html>
