Add a form handler method

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
    <h1>Coding Events</h1>
    <nav>
       <ul>
-         <li><a href="/events">All Events</a></li>
+         <li><a href="events/">All Events</a></li>
       </ul>
    </nav>
 </body>
