--- a/src/main/resources/templates/events/index.html
+++ b/src/main/resources/templates/events/index.html
@@ -5,12 +5,16 @@
    <title>Coding Events</title>
 </head>
 <body>
-   <h1>All Events</h1>
+
+   <header th:replace="fragments :: header"></header>
+
    <p th:unless="${events} and ${events.size()}">No events!</p>
+
    <ul>
       <th:block th:each="event : ${events}">
          <li th:text="${event}"></li>
       </th:block>
    </ul>
+
 </body>
 </html>
