--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,11 +5,10 @@
    <title>Coding Events</title>
 </head>
 <body>
+
    <h1>Coding Events</h1>
-   <nav>
-      <ul>
-         <li><a href="events/">All Events</a></li>
-      </ul>
-   </nav>
+
+   <header th:replace="fragments :: header"></header>
+
 </body>
 </html>
