--- a/src/main/resources/templates/events/index.html
+++ b/src/main/resources/templates/events/index.html
@@ -14,7 +14,7 @@
          </tr>
       </thead>
       <tr th:each="event : ${events}">
-         <td th:text="${event}"></td>
+         <td th:text="${event.name}"></td>
       </tr>
    </table>
 
