--- a/src/main/resources/templates/events/edit.html
+++ b/src/main/resources/templates/events/edit.html
@@ -2,29 +2,21 @@
 <html lang="en" xmlns:th="https://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
 <body class="container">
-
    <header th:replace="fragments :: header"></header>
-
-   <form method="post">
+   <form method="post" th:action="@{/events/edit}">
       <div class="form-group">
          <label>Name
-            <input type="text" name="name" class="form-control">
+            <input type="text" th:value="event.name" name="name" class="form-control">
          </label>
       </div>
       <div class="form-group">
          <label>Description
-            <input type="text" name="description" class="form-control">
+            <input type="text" th:value="event.description" name="description" class="form-control">
          </label>
       </div>
       <div class="form-group">
-         <label>Contact Email
-            <input type="text" name="contactEmail" class="form-control">
-         </label>
-      </div>
-      <div class="form-group">
-         <input type="submit" value="Create" class="btn btn-success">
+         <input type="submit" value="Edit" class="btn btn-success">
       </div>
    </form>
-
 </body>
 </html>
