--- a/src/main/resources/templates/events/index.html
+++ b/src/main/resources/templates/events/index.html
@@ -14,6 +14,7 @@
             <th>Name</th>
             <th>Description</th>
             <th>Contact Email</th>
+            <th>Type</th>
          </tr>
       </thead>
       <tr th:each="event : ${events}">
@@ -21,6 +22,7 @@
          <td th:text="${event.name}"></td>
          <td th:text="${event.description}"></td>
          <td th:text="${event.contactEmail}"></td>
+         <td th:text="${event.type.displayName}"></td>
       </tr>
    </table>
 
